--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "vibect",
   "private": true,
+  "version": "1.0.0",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
+    "test": "turbo run test",
+    "clean": "turbo prune --filter=... && rimraf .turbo node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
