--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test": "turbo run test",
     "clean": "turbo prune --filter=... && rimraf .turbo node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format-check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "turbo": "^2.5.8",
     "typescript": "5.9.2"
