--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "format-check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky"
+    "prepare": "husky",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish-packages": "changeset publish"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
@@ -28,6 +31,7 @@
     ]
   },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
     "eslint-config-prettier": "^10.1.1",
