--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
+    "lint": "turbo run lint --",
     "test": "turbo run test",
     "clean": "turbo prune --filter=... && rimraf .turbo node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
@@ -23,17 +23,18 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "pnpm run lint --fix",
-      "pnpm run format --write"
+      "eslint --fix",
+      "prettier"
     ],
     "*.{md,json,css}": [
-      "pnpm run format --write"
+      "prettier"
     ]
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@vibect/eslint-config": "workspace:*",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
